YAMLdefinitions/tripinsights/poi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripinsights-poi
  labels:
    app: ti-poi
  namespace: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ti-poi
  template:
    metadata:
      labels:
        app: ti-poi
    spec:
      containers:
      - name: ti-poi
        image: registrypby9755.azurecr.io/tripinsights/poi:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ti-poi
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: ti-poi
