YAMLdefinitions/tripinsights/trips-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripinsights-trips
  labels:
    app: ti-trips
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ti-trips
  template:
    metadata:
      labels:
        app: ti-trips
    spec:
      containers:
      - name: ti-trips
        image: registrypby9755.azurecr.io/tripinsights/trips:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ti-trips
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 9911
      targetPort: 80
  selector:
    app: ti-trips
