YAMLdefinitions/tripinsights/tripviewer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripinsights-tripviewer
  namespace: web
  labels:
    app: ti-tripviewer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ti-tripviewer
  template:
    metadata:
      labels:
        app: ti-tripviewer
    spec:
      containers:
      - name: ti-tripviewer
        image: registrypby9755.azurecr.io/tripinsights/tripviewer:1.1
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ti-tripviewer
  namespace: web
spec:
  selector:
    app: ti-tripviewer
  type: LoadBalancer  
  ports:
  - port: 8080
    targetPort: 80
