YAMLdefinitions/tripinsights/user-java-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripinsights-userjava
  labels:
    app: ti-userjava
  namespace: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ti-userjava
  template:
    metadata:
      labels:
        app: ti-userjava
    spec:
      containers:
      - name: ti-userjava
        image: registrypby9755.azurecr.io/tripinsights/user-java:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ti-userjava
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: ti-userjava
