YAMLdefinitions/tripinsights/user-profile-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripinsights-userprofile
  namespace: api
  labels:
    app: ti-userprofile
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ti-userprofile
  template:
    metadata:
      labels:
        app: ti-userprofile
    spec:
      containers:
      - name: ti-userprofile
        image: registrypby9755.azurecr.io/tripinsights/userprofile:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ti-userprofile
  namespace: api
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: ti-userprofile
